--- a/om_mig.html
+++ b/om_mig.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Om mig</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        MENU
+    </header>
+    <main>
+        <h1>Om mig</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo quisquam ad officiis, distinctio libero iste
+            fuga doloribus corporis aut totam praesentium ratione perferendis omnis accusamus cum soluta nostrum
+            reprehenderit deleniti.</p>
+    </main>
+    <footer>
+        <p>Lavet af Eyðbjørg</p>
+    </footer>
 </body>
 
 </html>
