--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 </head>
 
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        MENU
+    </header>
+    <main>
+        <h1>Forside</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, alias doloremque illo repudiandae culpa
+            dolorem voluptatem omnis minima excepturi repellendus autem impedit molestiae tempora quam neque
+            perspiciatis consequuntur pariatur id.</p>
+    </main>
+    <footer>
+        <p>Lavet af Eyðbjørg</p>
+    </footer>
 </body>
 
 </html>
